# Trails-MD

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  env.yml  mkdocs.yml  pyproject.toml  run.py
.github/workflows/: ci.yml  docs.yml  release.yml
autosampler/: __init__.py  analysis_cli.py  cli.py  config.py  core.py  init_cli.py  log_cli.py  logs.py  path_cli.py  paths.py  reporting.py  templates.py  welcome.py
autosampler/analysis/: __init__.py  data.py  plots.py
autosampler/binning/: __init__.py  adaptive.py  spatial.py  we.py
autosampler/checkpoints/: manager.py
autosampler/engines/: __init__.py  amber.py  base.py  gromacs.py  openmm.py
autosampler/execution/: __init__.py  base.py  local.py  run_task.py  scheduler.py
autosampler/msm/: __init__.py  convergence.py  diagnostics.py  estimator.py
autosampler/spaces/: __init__.py  features.py  model.py  registry.py  retraining.py  scalers.py  spib.py  tvae.py
autosampler/spawners/: __init__.py  base.py  density.py  fps.py  lof.py  msm.py  voronoi.py  we.py
autosampler/utils/: math.py  seeds.py
autosampler/workflows/: parallel.py
docs/: analysis.md  api.md  binning.md  cli.md  code_review.md  concepts.md  configuration.md  cv_methods.md  execution.md  feature_selection.md  hpc_scaling.md  ice_nucleation_cv_protocol.md  index.md  input_file.md  modes.md  msm.md  notebook_tutorial.md  performance.md  quickstart.md  references.md  results_in_paper.md
docs/tutorials/: adaptive_msm.md  aib9.md  alad.md
examples/: README.md  pbs_submit.sh  run_local.sh  slurm_submit.sh  template.yaml
examples/AIB9/: aib9_system.xml  config_adaptive.yaml  config_deep_tica.yaml  config_fixed_phi_psi.yaml  config_msm_feature_selection.yaml  config_msm_vampnet.yaml  config_pbs.yaml  config_phi_psi.yaml  config_spib.yaml  config_target.yaml  config_tda_phi_sweep.yaml  config_we.yaml  plot_phi_psi.py  plot_rmsd_rg.py  project_phi_psi.py  project_tda_phi_psi.py  project_vae_latent.py  system.py
examples/AlaD/: config.yaml  config_voronoi.yaml  project_phi_psi.py  start.gro  topol.top
examples/alanine_dipeptide/: build_system.py  config.yaml  config_kinetics.yaml  project_phi_psi.py  system.py  system.xml
examples/ice_nucleation/: MIGRATION.md  README.md  config_target_mw.yaml  env-ice.yml  ice_descriptors.py  phase0_calibration.py  phase0_calibration_results.json  project_ice.py  requirements-ice.txt
examples/notebooks/: adaptive_msm_tutorial.ipynb
hpc_tests/: CLUSTER_AGENT_PROMPT.md  DEBUGGING.md  README.md  RUNBOOK.md  run_local_matrix.py
hpc_tests/assets/: build_alad_amber.py
hpc_tests/checks/: preflight.py  validate_results.py
hpc_tests/configs/: alad_cpu_pbs.yaml  alad_cpu_slurm.yaml  alad_gpu_pbs.yaml  alad_gpu_slurm.yaml
hpc_tests/pbs/: run_cpu.pbs  run_features.pbs  run_gpu.pbs
hpc_tests/slurm/: run_cpu.sbatch  run_features.sbatch  run_gpu.sbatch
tests/: test_adaptive_binning.py  test_amber_periodicity.py  test_analysis.py  test_binning_adaptive.py  test_checkpoint_delta.py  test_config_and_spawner.py  test_core_msm_integration.py  test_cv_methods.py  test_engine_constraint_tolerance.py  test_engine_isolation.py  test_execution.py  test_feature_selection.py  test_hardening.py  test_hpc_review_fixes.py  test_input_template.py  test_kinetics_mode.py  test_mfpt_reporting.py  test_msm.py  test_msm_lag_guard.py  test_msm_tmatrix.py  test_persistent_workers.py  test_reproducibility.py  test_retraining.py  test_review_fixes.py  test_spawner_weighted_choice.py  test_spawners_and_paths.py  test_we_failed_walkers.py  test_we_frontier.py  test_we_rate_exactness.py  test_we_recycling.py  test_we_recycling_basis.py  test_we_weights.py  test_weighted_ensemble.py
tools/: generate_changelog_pdf.py  generate_review_pdf.py
trails_md/: __init__.py  analysis_cli.py  cli.py  config.py  core.py  init_cli.py  log_cli.py  logs.py  path_cli.py  paths.py  reporting.py  templates.py  welcome.py
trails_md/analysis/: data.py  plots.py
trails_md/binning/: adaptive.py  spatial.py  we.py
trails_md/checkpoints/: manager.py
trails_md/engines/: __init__.py  amber.py  base.py  gromacs.py  openmm.py
trails_md/execution/: __init__.py  base.py  local.py  pbs.py  run_task.py  scheduler.py  slurm.py
trails_md/msm/: __init__.py  convergence.py  diagnostics.py  estimator.py
trails_md/spaces/: __init__.py  feature_selection.py  features.py  model.py  registry.py  spib.py  tvae.py
trails_md/spawners/: base.py  density.py  fps.py  history.py  lof.py  msm.py  voronoi.py  we.py
trails_md/utils/: __init__.py  math.py  seeds.py
trails_md/workflows/: parallel.py
