[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autosampler"
version = "2.0.0"
description = "Adaptive collective-variable sampling framework for molecular dynamics."
requires-python = ">=3.10"
authors = [
  { name = "AutoSampler contributors" }
]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.9",
  "shapely>=2.0",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "scikit-learn>=1.2",
  "MDAnalysis>=2.5",
  "openmm>=8.0",
  "torch>=2.0",
  "deeptime>=0.4",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.optional-dependencies]
deep-tica = [
  "lightning>=2.0",
  "mlcolvar>=1.0",
]
examples = [
  "matplotlib>=3.7",
]
test = [
  "pytest>=7.0",
  "ruff>=0.6",
]
docs = [
  "mkdocs-material>=9.0",
]
all = [
  "autosampler[deep-tica,examples,test,docs]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["autosampler*"]
exclude = ["examples*", "tests*", "latex*"]

[tool.setuptools]
include-package-data = false

[project.scripts]
autosampler = "autosampler.cli:main"
autosampler-run = "autosampler.cli:main"
autosampler-path = "autosampler.path_cli:main"
autosampler-log = "autosampler.log_cli:main"
autosampler-analyze = "autosampler.analysis_cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.black]
line-length = 88
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
# Pragmatic starter rule set; expand over time as the codebase is cleaned up.
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
  "E501",  # line length handled by black
  "B008",  # function calls in argument defaults (used intentionally)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exports
"tests/*" = ["E402"]  # importorskip before imports
