[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autosampler"
dynamic = ["version"]
description = "Adaptive collective-variable sampling framework for molecular dynamics."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  # TODO(release): confirm the full author list, affiliations, and ORCIDs for the
  # publication (mirror these in CITATION.cff).
  { name = "Dibyendu Maity", email = "dibyendumaity1999@bose.res.in" },
  { name = "Suman Chakrabarty", email = "chakrabarty.suman@gmail.com" },
]
keywords = [
  "molecular-dynamics", "adaptive-sampling", "markov-state-model",
  "collective-variables", "enhanced-sampling", "openmm",
]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.9",
  "shapely>=2.0",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "scikit-learn>=1.2",
  "MDAnalysis>=2.5",
  "torch>=2.0",
  "deeptime>=0.4",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://github.com/TeamSuman/AutoSampler"
Repository = "https://github.com/TeamSuman/AutoSampler"
Documentation = "https://github.com/TeamSuman/AutoSampler/tree/main/docs"
Issues = "https://github.com/TeamSuman/AutoSampler/issues"
Changelog = "https://github.com/TeamSuman/AutoSampler/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# The default OpenMM engine. Kept optional because OpenMM is most reliably
# installed from conda-forge; the engine is imported lazily so the base package
# installs and imports without it. `pip install 'autosampler[openmm]'` pulls the
# PyPI wheel where available.
openmm = [
  "openmm>=8.0",
]
deep-tica = [
  "lightning>=2.0",
  "mlcolvar>=1.0",
]
examples = [
  "matplotlib>=3.7",
]
test = [
  "pytest>=7.0",
  "ruff>=0.6",
]
docs = [
  "mkdocs-material>=9.0",
]
all = [
  "autosampler[openmm,deep-tica,examples,test,docs]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["autosampler*"]
exclude = ["examples*", "tests*", "latex*"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
version = { attr = "autosampler.__version__" }  # single source: autosampler/__init__.py

[project.scripts]
autosampler = "autosampler.cli:main"
autosampler-run = "autosampler.cli:main"
autosampler-path = "autosampler.path_cli:main"
autosampler-log = "autosampler.log_cli:main"
autosampler-analyze = "autosampler.analysis_cli:main"
autosampler-init = "autosampler.init_cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.black]
line-length = 88
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
# Pragmatic starter rule set; expand over time as the codebase is cleaned up.
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
  "E501",  # line length handled by black
  "B008",  # function calls in argument defaults (used intentionally)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exports
"tests/*" = ["E402"]  # importorskip before imports
